<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:context="me.paxana.cwnet.ui.MovieActivity">

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/materialRatingBar"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:numStars="10"
        app:layout_constraintBottom_toTopOf="@+id/summaryTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yearTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="252dp"
        android:layout_height="111dp"
        android:layout_above="@+id/summaryTextView"
        android:layout_below="@+id/yearTextView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/posterImageView"
        android:gravity="center_vertical|fill_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/posterImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Blade Runner RETURN OF THE UNNECESSARILY LONG TITLE"
        android:layout_toEndOf="@+id/posterImageView"/>

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/summaryTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/br_poster"
        android:contentDescription="@string/movie_poster"/>

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="43dp"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/materialRatingBar"
        app:layout_constraintStart_toEndOf="@+id/posterImageView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.21"
        tools:text="1982"
        android:layout_marginLeft="8dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="256dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="256dp"/>

    <ExpandableListView
        android:id="@+id/triggerListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:stackFromBottom="true"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <TextView
        android:id="@+id/plzConsiderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_reviews"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/triggerListView"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in_sign_up_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="366dp"
        android:layout_height="81dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/plzConsiderTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialRatingBar"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="12dp">

        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:textColor="@color/textPrimary"
            app:layout_constraintBottom_toTopOf="@+id/triggerListView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Type type Type type Type type Type type Type type Type type Type type Type type Type type"
            />
    </ScrollView>

</android.support.constraint.ConstraintLayout>